QtGui/gen_qevent.h

class QInputDevice;
class QInputEvent;
typedef QInputMethodEvent::Attribute QInputMethodEvent__Attribute;
typedef struct QApplicationStateChangeEvent QApplicationStateChangeEvent;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QInputMethodEvent__Attribute QInputMethodEvent__Attribute;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QScreen QScreen;
typedef struct QScreenOrientationChangeEvent QScreenOrientationChangeEvent;
typedef struct QScrollEvent QScrollEvent;
typedef struct QScrollPrepareEvent QScrollPrepareEvent;
typedef struct QSizeF QSizeF;
typedef struct QTouchEvent QTouchEvent;
typedef struct QVariant QVariant;
uint8_t QTouchEvent_touchPointStates(const QTouchEvent* self);
struct miqt_array /* of QEventPoint* */  QTouchEvent_touchPoints(const QTouchEvent* self);
bool QTouchEvent_isBeginEvent(const QTouchEvent* self);
bool QTouchEvent_isUpdateEvent(const QTouchEvent* self);
bool QTouchEvent_isEndEvent(const QTouchEvent* self);
bool QTouchEvent_override_virtual_clone(void* self, intptr_t slot);
QTouchEvent* QTouchEvent_virtualbase_clone(const void* self);
bool QTouchEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QTouchEvent_virtualbase_isBeginEvent(const void* self);
bool QTouchEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QTouchEvent_virtualbase_isUpdateEvent(const void* self);
bool QTouchEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QTouchEvent_virtualbase_isEndEvent(const void* self);
bool QTouchEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QTouchEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QTouchEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QTouchEvent_virtualbase_setAccepted(void* self, bool accepted);
void QTouchEvent_delete(QTouchEvent* self);
QScrollPrepareEvent* QScrollPrepareEvent_new(QPointF* startPos);
QScrollPrepareEvent* QScrollPrepareEvent_clone(const QScrollPrepareEvent* self);
QPointF* QScrollPrepareEvent_startPos(const QScrollPrepareEvent* self);
QSizeF* QScrollPrepareEvent_viewportSize(const QScrollPrepareEvent* self);
QRectF* QScrollPrepareEvent_contentPosRange(const QScrollPrepareEvent* self);
QPointF* QScrollPrepareEvent_contentPos(const QScrollPrepareEvent* self);
void QScrollPrepareEvent_setViewportSize(QScrollPrepareEvent* self, QSizeF* size);
void QScrollPrepareEvent_setContentPosRange(QScrollPrepareEvent* self, QRectF* rect);
void QScrollPrepareEvent_setContentPos(QScrollPrepareEvent* self, QPointF* pos);
bool QScrollPrepareEvent_override_virtual_clone(void* self, intptr_t slot);
QScrollPrepareEvent* QScrollPrepareEvent_virtualbase_clone(const void* self);
bool QScrollPrepareEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QScrollPrepareEvent_virtualbase_setAccepted(void* self, bool accepted);
void QScrollPrepareEvent_delete(QScrollPrepareEvent* self);
QScrollEvent* QScrollEvent_new(QPointF* contentPos, QPointF* overshoot, int scrollState);
QScrollEvent* QScrollEvent_clone(const QScrollEvent* self);
QPointF* QScrollEvent_contentPos(const QScrollEvent* self);
QPointF* QScrollEvent_overshootDistance(const QScrollEvent* self);
int QScrollEvent_scrollState(const QScrollEvent* self);
bool QScrollEvent_override_virtual_clone(void* self, intptr_t slot);
QScrollEvent* QScrollEvent_virtualbase_clone(const void* self);
bool QScrollEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QScrollEvent_virtualbase_setAccepted(void* self, bool accepted);
void QScrollEvent_delete(QScrollEvent* self);
QScreenOrientationChangeEvent* QScreenOrientationChangeEvent_new(QScreen* screen, int orientation);
QScreenOrientationChangeEvent* QScreenOrientationChangeEvent_clone(const QScreenOrientationChangeEvent* self);
QScreen* QScreenOrientationChangeEvent_screen(const QScreenOrientationChangeEvent* self);
int QScreenOrientationChangeEvent_orientation(const QScreenOrientationChangeEvent* self);
bool QScreenOrientationChangeEvent_override_virtual_clone(void* self, intptr_t slot);
QScreenOrientationChangeEvent* QScreenOrientationChangeEvent_virtualbase_clone(const void* self);
bool QScreenOrientationChangeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QScreenOrientationChangeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QScreenOrientationChangeEvent_delete(QScreenOrientationChangeEvent* self);
QApplicationStateChangeEvent* QApplicationStateChangeEvent_new(int state);
QApplicationStateChangeEvent* QApplicationStateChangeEvent_clone(const QApplicationStateChangeEvent* self);
int QApplicationStateChangeEvent_applicationState(const QApplicationStateChangeEvent* self);
bool QApplicationStateChangeEvent_override_virtual_clone(void* self, intptr_t slot);
QApplicationStateChangeEvent* QApplicationStateChangeEvent_virtualbase_clone(const void* self);
bool QApplicationStateChangeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QApplicationStateChangeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QApplicationStateChangeEvent_delete(QApplicationStateChangeEvent* self);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new(int typ, int s, int l, QVariant* val);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new2(int typ, int s, int l);
QInputMethodEvent__Attribute* QInputMethodEvent__Attribute_new3(QInputMethodEvent__Attribute* param1);
void QInputMethodEvent__Attribute_operatorAssign(QInputMethodEvent__Attribute* self, QInputMethodEvent__Attribute* param1);
void QInputMethodEvent__Attribute_delete(QInputMethodEvent__Attribute* self);