qt6/gen_qevent.nim

proc fcQTouchEvent_touchPointStates(self: pointer, ): cint {.importc: "QTouchEvent_touchPointStates".}
proc fcQTouchEvent_touchPoints(self: pointer, ): struct_miqt_array {.importc: "QTouchEvent_touchPoints".}
proc fcQTouchEvent_isBeginEvent(self: pointer, ): bool {.importc: "QTouchEvent_isBeginEvent".}
proc fcQTouchEvent_isUpdateEvent(self: pointer, ): bool {.importc: "QTouchEvent_isUpdateEvent".}
proc fcQTouchEvent_isEndEvent(self: pointer, ): bool {.importc: "QTouchEvent_isEndEvent".}
proc fQTouchEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QTouchEvent_virtualbase_clone".}
proc fcQTouchEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_clone".}
proc fQTouchEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QTouchEvent_virtualbase_isBeginEvent".}
proc fcQTouchEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_isBeginEvent".}
proc fQTouchEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QTouchEvent_virtualbase_isUpdateEvent".}
proc fcQTouchEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_isUpdateEvent".}
proc fQTouchEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QTouchEvent_virtualbase_isEndEvent".}
proc fcQTouchEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_isEndEvent".}
proc fQTouchEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QTouchEvent_virtualbase_setTimestamp".}
proc fcQTouchEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_setTimestamp".}
proc fQTouchEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QTouchEvent_virtualbase_setAccepted".}
proc fcQTouchEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QTouchEvent_override_virtual_setAccepted".}
proc fcQTouchEvent_delete(self: pointer) {.importc: "QTouchEvent_delete".}
proc fcQScrollPrepareEvent_new(startPos: pointer): ptr cQScrollPrepareEvent {.importc: "QScrollPrepareEvent_new".}
proc fcQScrollPrepareEvent_clone(self: pointer, ): pointer {.importc: "QScrollPrepareEvent_clone".}
proc fcQScrollPrepareEvent_startPos(self: pointer, ): pointer {.importc: "QScrollPrepareEvent_startPos".}
proc fcQScrollPrepareEvent_viewportSize(self: pointer, ): pointer {.importc: "QScrollPrepareEvent_viewportSize".}
proc fcQScrollPrepareEvent_contentPosRange(self: pointer, ): pointer {.importc: "QScrollPrepareEvent_contentPosRange".}
proc fcQScrollPrepareEvent_contentPos(self: pointer, ): pointer {.importc: "QScrollPrepareEvent_contentPos".}
proc fcQScrollPrepareEvent_setViewportSize(self: pointer, size: pointer): void {.importc: "QScrollPrepareEvent_setViewportSize".}
proc fcQScrollPrepareEvent_setContentPosRange(self: pointer, rect: pointer): void {.importc: "QScrollPrepareEvent_setContentPosRange".}
proc fcQScrollPrepareEvent_setContentPos(self: pointer, pos: pointer): void {.importc: "QScrollPrepareEvent_setContentPos".}
proc fQScrollPrepareEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QScrollPrepareEvent_virtualbase_clone".}
proc fcQScrollPrepareEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QScrollPrepareEvent_override_virtual_clone".}
proc fQScrollPrepareEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QScrollPrepareEvent_virtualbase_setAccepted".}
proc fcQScrollPrepareEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QScrollPrepareEvent_override_virtual_setAccepted".}
proc fcQScrollPrepareEvent_delete(self: pointer) {.importc: "QScrollPrepareEvent_delete".}
proc fcQScrollEvent_new(contentPos: pointer, overshoot: pointer, scrollState: cint): ptr cQScrollEvent {.importc: "QScrollEvent_new".}
proc fcQScrollEvent_clone(self: pointer, ): pointer {.importc: "QScrollEvent_clone".}
proc fcQScrollEvent_contentPos(self: pointer, ): pointer {.importc: "QScrollEvent_contentPos".}
proc fcQScrollEvent_overshootDistance(self: pointer, ): pointer {.importc: "QScrollEvent_overshootDistance".}
proc fcQScrollEvent_scrollState(self: pointer, ): cint {.importc: "QScrollEvent_scrollState".}
proc fQScrollEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QScrollEvent_virtualbase_clone".}
proc fcQScrollEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QScrollEvent_override_virtual_clone".}
proc fQScrollEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QScrollEvent_virtualbase_setAccepted".}
proc fcQScrollEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QScrollEvent_override_virtual_setAccepted".}
proc fcQScrollEvent_delete(self: pointer) {.importc: "QScrollEvent_delete".}
proc fcQScreenOrientationChangeEvent_new(screen: pointer, orientation: cint): ptr cQScreenOrientationChangeEvent {.importc: "QScreenOrientationChangeEvent_new".}
proc fcQScreenOrientationChangeEvent_clone(self: pointer, ): pointer {.importc: "QScreenOrientationChangeEvent_clone".}
proc fcQScreenOrientationChangeEvent_screen(self: pointer, ): pointer {.importc: "QScreenOrientationChangeEvent_screen".}
proc fcQScreenOrientationChangeEvent_orientation(self: pointer, ): cint {.importc: "QScreenOrientationChangeEvent_orientation".}
proc fQScreenOrientationChangeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QScreenOrientationChangeEvent_virtualbase_clone".}
proc fcQScreenOrientationChangeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QScreenOrientationChangeEvent_override_virtual_clone".}
proc fQScreenOrientationChangeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QScreenOrientationChangeEvent_virtualbase_setAccepted".}
proc fcQScreenOrientationChangeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QScreenOrientationChangeEvent_override_virtual_setAccepted".}
proc fcQScreenOrientationChangeEvent_delete(self: pointer) {.importc: "QScreenOrientationChangeEvent_delete".}
proc fcQApplicationStateChangeEvent_new(state: cint): ptr cQApplicationStateChangeEvent {.importc: "QApplicationStateChangeEvent_new".}
proc fcQApplicationStateChangeEvent_clone(self: pointer, ): pointer {.importc: "QApplicationStateChangeEvent_clone".}
proc fcQApplicationStateChangeEvent_applicationState(self: pointer, ): cint {.importc: "QApplicationStateChangeEvent_applicationState".}
proc fQApplicationStateChangeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QApplicationStateChangeEvent_virtualbase_clone".}
proc fcQApplicationStateChangeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QApplicationStateChangeEvent_override_virtual_clone".}
proc fQApplicationStateChangeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QApplicationStateChangeEvent_virtualbase_setAccepted".}
proc fcQApplicationStateChangeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QApplicationStateChangeEvent_override_virtual_setAccepted".}
proc fcQApplicationStateChangeEvent_delete(self: pointer) {.importc: "QApplicationStateChangeEvent_delete".}
proc fcQInputMethodEventAttribute_new(typ: cint, s: cint, l: cint, val: pointer): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new".}
proc fcQInputMethodEventAttribute_new2(typ: cint, s: cint, l: cint): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new2".}
proc fcQInputMethodEventAttribute_new3(param1: pointer): ptr cQInputMethodEventAttribute {.importc: "QInputMethodEvent__Attribute_new3".}
proc fcQInputMethodEventAttribute_operatorAssign(self: pointer, param1: pointer): void {.importc: "QInputMethodEvent__Attribute_operatorAssign".}
proc fcQInputMethodEventAttribute_delete(self: pointer) {.importc: "QInputMethodEvent__Attribute_delete".}


func init*(T: type QInputEvent, h: ptr cQInputEvent): QInputEvent =
  T(h: h)
proc create*(T: type QInputEvent, typeVal: gen_qcoreevent.QEventType, m_dev: gen_qinputdevice.QInputDevice): QInputEvent =

  QInputEvent.init(fcQInputEvent_new(cint(typeVal), m_dev.h))
proc create*(T: type QInputEvent, typeVal: gen_qcoreevent.QEventType, m_dev: gen_qinputdevice.QInputDevice, modifiers: gen_qnamespace.KeyboardModifier): QInputEvent =

  QInputEvent.init(fcQInputEvent_new2(cint(typeVal), m_dev.h, cint(modifiers)))
proc clone*(self: QInputEvent, ): QInputEvent =

  QInputEvent(h: fcQInputEvent_clone(self.h))

proc device*(self: QInputEvent, ): gen_qinputdevice.QInputDevice =

  gen_qinputdevice.QInputDevice(h: fcQInputEvent_device(self.h))

proc deviceType*(self: QInputEvent, ): gen_qinputdevice.QInputDeviceDeviceType =

  gen_qinputdevice.QInputDeviceDeviceType(fcQInputEvent_deviceType(self.h))

proc modifiers*(self: QInputEvent, ): gen_qnamespace.KeyboardModifier =

  gen_qnamespace.KeyboardModifier(fcQInputEvent_modifiers(self.h))

proc setModifiers*(self: QInputEvent, modifiers: gen_qnamespace.KeyboardModifier): void =

  fcQInputEvent_setModifiers(self.h, cint(modifiers))

proc timestamp*(self: QInputEvent, ): culonglong =

  fcQInputEvent_timestamp(self.h)

proc setTimestamp*(self: QInputEvent, timestamp: culonglong): void =

  fcQInputEvent_setTimestamp(self.h, timestamp)

proc callVirtualBase_clone(self: QInputEvent, ): QInputEvent =


  QInputEvent(h: fQInputEvent_virtualbase_clone(self.h))

type QInputEventcloneBase* = proc(): QInputEvent
proc onclone*(self: QInputEvent, slot: proc(super: QInputEventcloneBase): QInputEvent) =
  # TODO check subclass
  type Cb = proc(super: QInputEventcloneBase): QInputEvent
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQInputEvent_override_virtual_clone(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QInputEvent_clone(self: ptr cQInputEvent, slot: int): pointer {.exportc: "miqt_exec_callback_QInputEvent_clone ".} =
  type Cb = proc(super: QInputEventcloneBase): QInputEvent
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(): auto =
    callVirtualBase_clone(QInputEvent(h: self), )

  let virtualReturn = nimfunc[](superCall )

  virtualReturn.h
proc callVirtualBase_setTimestamp(self: QInputEvent, timestamp: culonglong): void =


  fQInputEvent_virtualbase_setTimestamp(self.h, timestamp)

type QInputEventsetTimestampBase* = proc(timestamp: culonglong): void
proc onsetTimestamp*(self: QInputEvent, slot: proc(super: QInputEventsetTimestampBase, timestamp: culonglong): void) =
  # TODO check subclass
  type Cb = proc(super: QInputEventsetTimestampBase, timestamp: culonglong): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQInputEvent_override_virtual_setTimestamp(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QInputEvent_setTimestamp(self: ptr cQInputEvent, slot: int, timestamp: culonglong): void {.exportc: "miqt_exec_callback_QInputEvent_setTimestamp ".} =
  type Cb = proc(super: QInputEventsetTimestampBase, timestamp: culonglong): void
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(timestamp: culonglong): auto =
    callVirtualBase_setTimestamp(QInputEvent(h: self), timestamp)
  let slotval1 = timestamp


  nimfunc[](superCall, slotval1)
proc callVirtualBase_setAccepted(self: QInputEvent, accepted: bool): void =


  fQInputEvent_virtualbase_setAccepted(self.h, accepted)

type QInputEventsetAcceptedBase* = proc(accepted: bool): void
proc onsetAccepted*(self: QInputEvent, slot: proc(super: QInputEventsetAcceptedBase, accepted: bool): void) =
  # TODO check subclass
  type Cb = proc(super: QInputEventsetAcceptedBase, accepted: bool): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQInputEvent_override_virtual_setAccepted(self.h, cast[int](addr tmp[]))
